--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<h2 class="title">Лабораторні роботи</h2>
 				<div>
 					<div class="lr-item one">
-						<h5 class="title">  <a href="1.html">Лабораторна робота #1</h5></a>				
+						<h5 class="title">  <a href="aplikes.github.io/OOEI/LR1/URK.jpg">Лабораторна робота #1</h5></a>				
 				</div>	
 </div>
 	
