--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <div id="home">	
 				<h4>Ласкаво просимо на сайт Aplikes</h4>
 				<h1>aplikes.github.io</h1>
-				<form action="#lr-item">
-					<button class="btn">Перейти до ЛР</button>
 				</form>
 		</div>
 	
@@ -25,7 +23,7 @@
 </div>
 	
 	<div class="lr-item too">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #2</h5></a>
+						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR2/LR2.html">Лабораторна робота #2</h5></a>
 					</div>
 					<div class="lr-item three">
 						<h5 class="title"> <a href="1.html">Лабораторна робота #3</h5></a>
