--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <div id="home">	
 				<h4>Ласкаво просимо на сайт Aplikes</h4>
+				<h1>aplikes.github.io</h1>
+				<form action="https://aplikes.github.io/#lr-item">
+					<button class="btn">Перейти до ЛР</button>
 				</form>
 		</div>
 	
