--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR2/LR2.html">Лабораторна робота #2</h5></a>
 					</div>
 					<div class="lr-item three">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #3</h5></a>
+						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR3/LR3.html>Лабораторна робота #3</h5></a>
 					</div>
 					<div class="lr-item foo">
 						<h5 class="title"> <a href="1.html">Лабораторна робота #4</h5></a>
