--- a/index.html
+++ b/index.html
@@ -40,14 +40,7 @@
 						<h5 class="title"> <a href="1.html">Лабораторна робота #6</h5></a>
 					</div>
 					<div class="lr-item seven">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #7</h5></a>
-					</div>
-					<div class="lr-item eight">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #8</h5></a>
-					</div>
-					<div class="lr-item nine">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #9</h5></a>
-					</div>
+						<h5 class="title"> <a href="1.html">Лабораторна робота #7</h5></a
 				</div>
 			</div>
 		</div>	
