--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 					</div>
 					<div class="lr-item seven">
 						<h5 class="title"> <a href="1.html">Лабораторна робота #7</h5></a
+					</div>
 				</div>
 			</div>
 		</div>	
