--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR5/LR5.svg">Лабораторна робота #5</h5></a>
 					</div>
 					<div class="lr-item six">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #6</h5></a>
+						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR6/LR6.epub">Лабораторна робота #6</h5></a>
 					</div>
 					<div class="lr-item seven">
 						<h5 class="title"> <a href="1.html">Лабораторна робота #7</h5></a
