--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR6/LR6.epub">Лабораторна робота #6</h5></a>
 					</div>
 					<div class="lr-item seven">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #7</h5></a
+						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR7/LR7.bas">Лабораторна робота #7</h5></a
 					</div>
 				</div>
 			</div>
