--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR3/LR3.html">Лабораторна робота #3</h5></a>
 					</div>
 					<div class="lr-item foo">
-						<h5 class="title"> <a href="1.html">Лабораторна робота #4</h5></a>
+						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR4/LR4.html">Лабораторна робота #4</h5></a>
 					</div>
 					<div class="lr-item five">
 						<h5 class="title"> <a href="http://aplikes.github.io/OOEI/LR5/LR5.svg">Лабораторна робота #5</h5></a>
